Makefile changes; only compiles changed cpp files; changes to Vector3D toString()

--- a/drawstuff/Makefile
+++ b/drawstuff/Makefile
@@ -4,18 +4,11 @@ ifeq ($(HOST), gray-ubnetbook)
 
 DEPLOY_LIB_DIR = /usr/lib
 DEPLOY_HDR_DIR = /usr/include/drawstuff
-CC = g++
-OUT_DIR = .
-OUT_LIB = libdstuff.a
 
 else 
 ifeq ($(shell hostname), e6500.lgltex.lgl) 
 DEPLOY_LIB_DIR = /usr/lib64
 DEPLOY_HDR_DIR = /usr/include/drawstuff
-CC = g++
-OUT_DIR = .
-OUT_LIB = libdstuff.a
-
 
 else
 $(error Unknown host: $(HOST))
@@ -23,6 +16,8 @@ endif
 endif
 
 
+CC = g++
+OUT_LIB = libdstuff.a
 BUILD_TYPE = release  # debug or release
 
 CFLAGS = -Wall -c
@@ -34,26 +29,27 @@ endif
 DEFINES = -DPATH_TO_TEXTURES=$(DEPLOY_HDR_DIR)/textures/ 
 LIBS =
 INC =
- 
-OBJS = drawstuff.o 
-OBJS += x11.o 
-OBJ_LIST = $(addprefix $(OUT_DIR)/,$(notdir $(OBJS)))
+
+H_FILES := $(wildcard *.h)
+CPP_FILES := $(wildcard *.cpp)
+O_FILES := $(CPP_FILES:.cpp=.o) 
 
 #####  TARGETS  ###########
 all : $(OUT_LIB)
 
 .cpp.o: 
-	$(CC) $(CFLAGS) $(INC) $(DEFINES) -o $(OUT_DIR)/$(notdir $@) $<
+	$(CC) $(CFLAGS) $(INC) $(DEFINES) -o $@ $<
 
-$(OUT_LIB) : $(OBJS)
-	ar -cq $(OUT_DIR)/$@ $(OBJ_LIST)
+$(OUT_LIB) : $(O_FILES)
+	ar -cq $@ $(O_FILES)
 
 clean:
-	rm -rf $(OUT_DIR)/*.o $(OUT_DIR)/$(OUT_LIB)
+	rm -rf *.o $(OUT_LIB)
 
 deploy:
-	if !(test -d $(DEPLOY_HDR_DIR)); then mkdir $(DEPLOY_HDR_DIR); fi
-	cp $(OUT_DIR)/$(OUT_LIB) $(DEPLOY_LIB_DIR)
+	@if !(test -d $(DEPLOY_HDR_DIR)); then mkdir $(DEPLOY_HDR_DIR); fi
+	rm -rf $(DEPLOY_HDR_DIR)/* $(DEPLOY_LIB_DIR)/$(OUT_LIB)
+	cp $(OUT_LIB) $(DEPLOY_LIB_DIR)
 	cp *.h $(DEPLOY_HDR_DIR)
 	cp -r textures/ $(DEPLOY_HDR_DIR)
 
