completed DrawstuffGraphics and ODECar; added Manual Steering

--- a/sofman/Makefile
+++ b/sofman/Makefile
@@ -6,7 +6,7 @@ H_FILES := $(wildcard *.h)
 CPP_FILES := $(wildcard *.cpp)
 O_FILES := $(CPP_FILES:.cpp=.o) 
 
-DEFINES = 
+DEFINES = -DdDOUBLE
 INC = 
 LIBS = -lcole
 LIBS += -lboost_date_time
@@ -14,6 +14,7 @@ LIBS += -lboost_thread
 LIBS += -lX11
 LIBS += -lGL -lGLU -lglut
 LIBS += -lm
+LIBS += -lode
 
 out : $(OUT_EXE)
 
