jgc updates for compatibility to fedora box

--- a/sofman/Makefile
+++ b/sofman/Makefile
@@ -1,16 +1,43 @@
 CC = g++
-CFLAGS = -Wall -O2 -c
 OUT_EXE = _out_
 
 H_FILES := $(wildcard *.h)
 CPP_FILES := $(wildcard *.cpp)
 O_FILES := $(CPP_FILES:.cpp=.o) 
 
+HOST = $(shell hostname)
+
+ifeq ($(HOST), gray-ubnetbook)
+CFLAGS = -Wall -O2 -c
 DEFINES = -DdDOUBLE
+ifeq ($(BUILD_TYPE), debug)
+        CFLAGS += -g
+endif
+
+else 
+ifeq ($(shell hostname), e6500.lgltex.lgl) 
+CFLAGS = -Wall -c -v
+CFLAGS += -std=c++0x
+ifeq ($(BUILD_TYPE), debug)
+        CFLAGS += -g
+endif
+
+else
+$(error Unknown host: $(HOST))
+endif
+endif
+
 INC = 
 LIBS = -lcole
 LIBS += -lboost_date_time
+ifeq ($(HOST), gray-ubnetbook)
 LIBS += -lboost_thread
+
+else 
+ifeq ($(shell hostname), e6500.lgltex.lgl) 
+LIBS += -lboost_thread-mt
+endif
+endif
 LIBS += -lX11
 LIBS += -lGL -lGLU -lglut
 LIBS += -lm
